# Camscii

./: CMakeLists.txt  ColorToAsciiConverter.hpp  LICENSE  OpenCvCam.hpp  README.md  main.cpp
